refactor: FolderService 트랜잭션 최적화
- 클래스 레벨 @Transactional 제거
- validateCreateFolder에 @Transactional(readOnly=true) 적용
- getMember() 헬퍼 메서드 추가"